# learn-qwen3-moe

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: environment.md  progress.md  roadmap.md
docs/plans/: 2026-07-16-qwen3-moe-learning-design.md  2026-07-16-week01-tutorial.md  2026-07-17-uv-pytorch-environment-design.md  2026-07-17-uv-pytorch-environment-implementation.md  2026-07-19-week02-tutorial.md  2026-07-22-week03-tutorial.md  2026-07-23-week04-attention-gqa-tutorial.md  2026-07-23-week05-rmsnorm-rope-qk-norm-tutorial.md
docs/superpowers/specs/: 2026-07-16-week01-tutorial-design.md  2026-07-19-week02-tutorial-design.md  2026-07-22-week03-tutorial-design.md  2026-07-23-week04-attention-gqa-tutorial-design.md  2026-07-23-week05-rmsnorm-rope-qk-norm-tutorial-design.md  2026-07-24-week03-week05-problem-driven-background-design.md
docs/tutorials/: week01-tensors-shapes-memory.md  week02-matmul-nn-module.md  week03-token-logits-causal-lm.md  week04-self-attention-gqa.md  week05-rmsnorm-rope-qk-norm.md
scripts/: check_environment.py
tests/: test_check_environment.py
