[project]
name = "learn-qwen3-moe"
version = "0.1.0"
description = "A learning project for implementing Qwen3 MoE inference from first principles."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = false
